--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@graphql-codegen/typescript-urql": "^1.4.0",
     "@svgr/core": "^4.3.2",
     "@svgr/plugin-jsx": "^4.3.2",
+    "@zeit/next-less": "^1.0.1",
     "babel-plugin-flow-to-typescript": "^0.4.0",
     "babel-plugin-json-to-proptypes": "^0.1.0",
     "babel-plugin-object-styles-to-template": "^0.2.2",
@@ -55,10 +56,12 @@
     "json-schema-to-typescript": "^6.1.3",
     "json-to-go": "gist:0d0b8324131c80eeb7e1df20001be32f",
     "json-ts": "^1.6.4",
+    "less": "^3.9.0",
     "lodash": "^4.17.14",
     "markdown": "^0.5.0",
     "monaco-editor": "^0.17.1",
     "next": "^8.1.0",
+    "next-fonts": "^0.17.0",
     "nprogress": "^0.2.0",
     "postcss": "^7.0.17",
     "postcss-js": "^2.0.2",
