--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ charset = utf-8
 indent_style = tab
 
 # Indentation override for all JS under lib directory
-[*.tsx]
+[*.tsx,*.ts]
 indent_style = space
 indent_size = 2
 
