--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
     "now-build": "next build && cp -r ./static/* .next/static",
     "postinstall": "patch-package"
   },
-  "engines": {
-    "node": "10.x"
-  },
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
     "@babel/standalone": "^7.5.5",
     "@graphql-codegen/core": "^1.4.0",
     "@graphql-codegen/flow": "^1.4.0",
@@ -70,6 +68,7 @@
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
     "react-jsonschema-form": "^1.7.0",
+    "react-spring": "^8.0.27",
     "snack-sdk": "^2.3.1",
     "stringify-object": "^3.3.0",
     "svg-to-dataurl": "^1.0.0",
