add Math Worksheets

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,15 @@
 {
   "presets": [
-    "next/babel"
+    [
+      "next/babel",
+      {
+        "styled-jsx": {
+          "plugins": [
+            "styled-jsx-plugin-less"
+          ]
+        }
+      }
+    ]
   ],
   "plugins": [
     ["module-resolver", {
