--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
     "clipboard-copy": "^3.0.0",
+    "cron-converter": "^0.0.12",
+    "cronstrue": "^1.81.0",
     "evergreen-ui": "^4.18.1",
     "flow-to-ts": "gist:3f49c8bd7a2b71429dcae28f2c2d1d97",
     "formik": "^1.5.8",
@@ -73,6 +75,7 @@
     "react-jsonschema-form": "^1.7.0",
     "snack-sdk": "^2.3.1",
     "stringify-object": "^3.3.0",
+    "styled-jsx-plugin-less": "^0.0.1-alpha.1",
     "svg-to-dataurl": "^1.0.0",
     "svgo": "^1.3.0",
     "transform-json-types": "^0.7.0",
@@ -85,6 +88,7 @@
     "@types/next": "^8.0.5",
     "@types/prettier": "^1.16.4",
     "@types/react": "^16.8.23",
+    "@types/styled-jsx": "^2.2.8",
     "@types/svgo": "^1.2.0",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
