--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss": "^7.0.17",
     "postcss-js": "^2.0.2",
     "qrcode.react": "^0.9.3",
+    "rc-tween-one": "^2.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
