support md desc

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jsonld": "^1.5.0",
     "@walmartlabs/json-to-simple-graphql-schema": "^2.0.0",
     "@zeit/next-less": "^1.0.1",
+    "@zeit/next-mdx": "^1.2.0",
     "babel-plugin-json-to-proptypes": "^0.1.0",
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
