page support markdown section.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/jsonld": "^1.5.0",
     "@walmartlabs/json-to-simple-graphql-schema": "^2.0.0",
     "@zeit/next-less": "^1.0.1",
-    "@zeit/next-mdx": "^1.2.0",
     "babel-plugin-json-to-proptypes": "^0.1.0",
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
@@ -106,6 +105,7 @@
     "husky": "^3.0.1",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^9.2.0",
+    "markdown-to-react-loader": "^1.1.0",
     "monaco-editor-webpack-plugin": "^1.7.0",
     "patch-package": "^6.1.2",
     "postinstall-postinstall": "^2.0.0",
