--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react": "^16.8.6",
     "react-compound-slider": "^2.2.0",
     "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.6",
     "react-ga": "^2.6.0",
     "react-jsonschema-form": "^1.7.0",
     "rust-keywords": "^1.1.0",
