--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "format": "prettier --write '**/*.ts' '**/*.tsx'",
     "build": "next build",
-    "bp": "next build && next export",
+    "export": "next export",
     "now-build": "next build",
     "postinstall": "patch-package",
     "build:analyze": "ANALYZE=true yarn build"
