--- a/.editorconfig
+++ b/.editorconfig
@@ -3,6 +3,9 @@
 # top-most EditorConfig file
 root = true
 
+indent_style = space
+indent_size = 2
+
 # Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
