--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write '**/*.ts' '**/*.tsx'",
     "build": "next build",
     "export": "next export",
+    "deploy": "node scripts/gh-pages.js",
     "now-build": "next build",
     "postinstall": "patch-package",
     "build:analyze": "ANALYZE=true yarn build"
@@ -103,6 +104,7 @@
     "@types/svgo": "^1.2.1",
     "@zeit/next-css": "^1.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "gh-pages": "^2.1.0",
     "husky": "^3.0.1",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^9.2.0",
