--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "json-ts": "^1.6.4",
     "json_typegen_wasm": "^0.3.3",
     "jsonld": "^1.6.2",
+    "jszip": "^3.2.2",
     "less": "^3.9.0",
     "lodash": "^4.17.15",
     "markdown": "^0.5.0",
