--- a/package.json
+++ b/package.json
@@ -54,23 +54,28 @@
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
     "clipboard-copy": "^4.0.1",
+    "cron-converter": "^1.0.0",
+    "cronstrue": "^1.110.0",
     "css-to-tailwind": "^1.0.3",
     "evergreen-ui": "^4.28.0",
     "flowgen": "^1.14.1",
     "formik": "^2.2.9",
     "generate-schema": "^2.6.0",
+    "gif.js": "^0.2.0",
     "gofmt.js": "^0.0.2",
     "graphql": "^15.5.1",
     "html2pug": "^4.0.0",
     "htmltojsx": "^0.3.0",
     "is-capitalized": "^1.0.0",
     "is-svg": "^4.3.1",
+    "json-schema-to-openapi-schema": "^0.4.0",
     "json-schema-to-typescript": "^10.1.4",
     "json-to-go": "gist:0d0b8324131c80eeb7e1df20001be32f",
     "json-ts": "^1.6.4",
     "json_typegen_wasm": "^0.6.1",
     "jsonld": "^5.2.0",
     "jsonschema-protobuf": "^1.0.2",
+    "jszip": "^3.6.0",
     "lodash": "^4.17.21",
     "markdown": "^0.5.0",
     "next": "10.2.3",
@@ -79,9 +84,9 @@
     "postcss": "^8.3.5",
     "postcss-js": "^3.0.3",
     "postcss7": "npm:postcss@7.x.x",
+    "prettier": "^1.18.2",
     "qrcode.react": "^1.0.1",
     "rc-tween-one": "^2.7.3",
-    "prettier": "^1.18.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.0.1",
@@ -106,8 +111,8 @@
     "@types/node": "^15.12.5",
     "@types/prettier": "^2.3.0",
     "@types/react": "^17.0.11",
-    "@types/svgo": "^1.3.3",
     "@types/styled-jsx": "^2.2.8",
+    "@types/svgo": "^1.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
@@ -122,7 +127,7 @@
     "styled-jsx-plugin-sass": "^1.0.0",
     "ui-box": "2.1.0",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.1",
+    "webpack": "^5.44.0",
     "worker-loader": "^2.0.0"
   },
   "husky": {
