--- a/package.json
+++ b/package.json
@@ -92,9 +92,10 @@
     "qrcode.react": "^0.9.3",
     "rc-tween-one": "^2.4.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-compound-slider": "^2.2.0",
+    "react-dom": "^17.0.2",
     "react-dropzone": "^10.1.6",
+    "react-ga": "^3.3.0",
     "react-jsonschema-form": "^1.7.0",
     "rust-keywords": "^1.1.0",
     "sha1": "^1.1.1",
