--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "dev": "next dev",
     "start": "next start",
     "format": "prettier --write '**/*.ts' '**/*.tsx'",
-    "build": "NODE_OPTIONS=\"--max-old-space-size=4096\" next build",
+    "build": "next build",
     "export": "next export",
     "deploy": "node scripts/gh-pages.js",
     "sitemap": "node scripts/sitemap.js",
     "now-build": "next build",
     "postinstall": "patch-package",
-    "ainstall": "npm install --registry=https://registry.npm.taobao.org",
+    "ainstall": "npm install --registry=https://registry.npmmirror.com",
     "build:analyze": "ANALYZE=true yarn build"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=18.x"
   },
   "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "@ckeditor/ckeditor5-build-classic": "^29.0.0",
-    "@ckeditor/ckeditor5-react": "^3.0.2",
     "@babel/plugin-transform-flow-strip-types": "^7.16.0",
     "@babel/plugin-transform-typescript": "^7.16.1",
+    "@babel/runtime": "^7.5.5",
     "@babel/standalone": "^7.14.7",
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
     "@graphql-codegen/core": "^1.17.10",
     "@graphql-codegen/flow": "^1.19.3",
     "@graphql-codegen/flow-operations": "^1.18.11",
@@ -48,38 +48,37 @@
     "@iarna/toml": "^3.0.0",
     "@khanacademy/flow-to-ts": "^0.5.2",
     "@lemonneko/easi-gen": "^0.0.36",
-    "@monaco-editor/react": "^4.2.1",
-    "@svgr/core": "^4.3.2",
-    "@svgr/plugin-jsx": "^4.3.2",
+    "@monaco-editor/react": "^4.6.0",
+    "@openapi-contrib/json-schema-to-openapi-schema": "^2.0.0",
+    "@rjsf/core": "^5.15.1",
+    "@rjsf/utils": "^5.15.1",
+    "@rjsf/validator-ajv8": "^5.15.1",
+    "@svgr/core": "^5.5.0",
+    "@svgr/plugin-jsx": "^5.5.0",
     "@types/jsonld": "^1.5.5",
     "@walmartlabs/json-to-simple-graphql-schema": "^2.0.4",
-    "@zeit/next-less": "^1.0.1",
     "autoprefixer": "^10.2.6",
     "autoprefixer9": "npm:autoprefixer@9.x.x",
     "axios": "^0.21.1",
     "babel-plugin-json-to-proptypes": "^0.1.0",
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
+    "clipboard-copy": "^4.0.1",
     "cron-converter": "^0.0.12",
     "cronstrue": "^1.81.0",
-    "css-to-tailwind": "^1.0.3",
-    "flow-to-ts": "gist:3f49c8bd7a2b71429dcae28f2c2d1d97",
-    "clipboard-copy": "^4.0.1",
     "css-to-tailwindcss": "^1.0.4",
-    "evergreen-ui": "^4.28.0",
+    "evergreen-ui": "^7.1.9",
     "flowgen": "^1.14.1",
-    "formik": "^1.5.8",
+    "formik": "^2.2.9",
     "generate-schema": "^2.6.0",
     "gif.js": "^0.2.0",
     "gofmt.js": "^0.0.2",
-    "graphql": "^14.4.2",
-    "graphql-tools": "^4.0.5",
+    "graphql": "^15.5.1",
     "html2pug": "^4.0.0",
     "htmltojsx": "^0.3.0",
     "is-capitalized": "^1.0.0",
-    "is-svg": "^4.2.0",
-    "json-schema-to-openapi-schema": "^0.3.0",
-    "json-schema-to-typescript": "^10.1.4",
+    "is-svg": "^4.3.1",
+    "json-schema-to-typescript": "10.1.4",
     "json-schema-to-zod": "^0.1.2",
     "json-to-go": "gist:0d0b8324131c80eeb7e1df20001be32f",
     "json-to-zod": "^1.1.2",
@@ -88,11 +87,10 @@
     "jsonld": "^5.2.0",
     "jsonschema-protobuf": "^1.0.2",
     "jszip": "^3.2.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "markdown": "^0.5.0",
-    "monaco-editor": "^0.17.1",
-    "next": "10.2.3",
-    "next-fonts": "^0.17.0",
+    "monaco-editor": "^0.45.0",
+    "next": "14.0.4",
     "nextjs-sitemap-generator": "^0.1.1",
     "nprogress": "^0.2.0",
     "postcss": "^8.3.5",
@@ -100,67 +98,58 @@
     "postcss-nested": "^6.0.0",
     "postcss7": "npm:postcss@7.x.x",
     "prettier": "^1.18.2",
-    "qrcode.react": "^0.9.3",
+    "qrcode.react": "^3.1.0",
     "rc-tween-one": "^2.4.1",
-    "react": "^17.0.2",
-    "react-compound-slider": "^2.2.0",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-jsonschema-form": "^1.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^11.0.1",
+    "react-ga": "^3.3.0",
     "recast": "^0.20.5",
     "rust-keywords": "^1.1.0",
+    "sass": "^1.69.7",
     "sha1": "^1.1.1",
-    "snack-sdk": "^2.3.1",
     "stringify-object": "^3.3.0",
-    "styled-jsx-plugin-less": "^0.0.1-alpha.1",
-    "svg-to-dataurl": "^1.0.0",
-    "tailwindcss": "^2.2.4",
-    "tailwindcss1": "npm:tailwindcss@1.9.6",
-    "svgo": "^1.3.2",
+    "styled-jsx": "^5.1.2",
+    "svgo": "^3.2.0",
     "tempy": "^1.0.1",
     "text-encoding-utf-8": "^1.0.2",
     "transform-json-types": "^0.7.0",
     "ts-json-schema-generator": "^0.93.0",
     "ts-to-zod": "^1.11.0",
-    "typescript": "4.3.4",
     "xml-js": "^1.6.11",
-    "yaml": "^1.6.0"
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^9.0.2",
-    "@now/node": "^0.12.0",
-    "@types/lodash": "^4.14.135",
-    "@types/next": "^8.0.5",
-    "@types/prettier": "^1.18.0",
-    "@types/react": "^16.8.23",
-    "@types/styled-jsx": "^2.2.8",
-    "@types/svgo": "^1.2.1",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "@mdx-js/loader": "^3.0.0",
+    "@styled-jsx/plugin-sass": "^4.1.0",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^20",
+    "@types/prettier": "^2.3.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@types/svgo": "^1.3.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "file-loader": "^6.2.0",
     "gh-pages": "^2.1.0",
-    "husky": "^3.0.1",
+    "husky": "^4.2.5",
     "imagemin-lint-staged": "^0.4.0",
-    "lint-staged": "^9.2.0",
-    "markdown-to-react-loader": "^1.2.0",
-    "node-sass": "^4.0.0",
+    "lint-staged": "^11.0.0",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.0.0",
-    "pretty-quick": "^1.11.1",
-    "styled-jsx-plugin-sass": "^1.0.0",
-    "typescript": "3.5.3",
-    "ui-box": "^2.1.0",
-    "webpack": "^4.37.0",
-    "worker-loader": "^2.0.0"
+    "typescript": "5.3.3",
+    "ui-box": "5.4.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.89.0",
+    "worker-loader": "^3.0.8"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && lint-staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
     "./assets/*/*.svg": [
-      "imagemin-lint-staged",
-      "git add"
+      "imagemin-lint-staged"
     ]
   }
 }
