--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-transform-typescript": "^7.16.1",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.5.5",
+    "@babel/parser": "^7.23.6",
     "@babel/standalone": "^7.14.7",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
@@ -105,7 +106,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.0.1",
     "react-ga": "^3.3.0",
-    "recast": "^0.20.5",
+    "recast": "^0.23.4",
     "rust-keywords": "^1.1.0",
     "sass": "^1.69.7",
     "sha1": "^1.1.1",
