--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "now-build": "next build",
     "postinstall": "patch-package",
     "ainstall": "pnpm install --registry=https://registry.npmmirror.com",
-    "build:analyze": "ANALYZE=true yarn build"
+    "build:analyze": "ANALYZE=true pnpm run build"
   },
   "engines": {
-    "node": ">=18.x"
+    "node": ">=20.x"
   },
   "dependencies": {
     "@babel/plugin-transform-flow-strip-types": "^7.16.0",
