--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "repository": "https://github.com/icai/transform",
   "author": "ritz078 <rkritesh078@gmail.com>, icai <gidcai@gmail.com>",
   "license": "MIT",
-  "packageManager": "pnpm@8.3.1",
   "scripts": {
     "dev:inspect": "NODE_OPTIONS=\"--inspect\" next dev",
     "dev": "next dev",
@@ -23,11 +22,12 @@
     "node": ">=20.x"
   },
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/parser": "^7.23.6",
     "@babel/plugin-transform-flow-strip-types": "^7.16.0",
     "@babel/plugin-transform-typescript": "^7.16.1",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.5.5",
-    "@babel/parser": "^7.23.6",
     "@babel/standalone": "^7.14.7",
     "@ckeditor/ckeditor5-build-classic": "^40.2.0",
     "@ckeditor/ckeditor5-react": "^6.2.0",
@@ -66,12 +66,11 @@
     "babel-plugin-json-to-proptypes": "^0.1.0",
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
-    "clipboard-copy": "^4.0.1",
     "classnames": "^2.5.1",
+    "clipboard-copy": "^4.0.1",
     "cron-converter": "^0.0.12",
     "cronstrue": "^1.81.0",
     "css-to-tailwindcss": "^1.0.4",
-    "ui-box": "5.4.1",
     "evergreen-ui": "^7.1.9",
     "flowgen": "^1.14.1",
     "formik": "^2.2.9",
@@ -121,12 +120,14 @@
     "transform-json-types": "^0.7.0",
     "ts-json-schema-generator": "^0.93.0",
     "ts-to-zod": "^1.11.0",
+    "ui-box": "5.4.1",
     "xml-js": "^1.6.11",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@styled-jsx/plugin-sass": "^4.1.0",
+    "@types/babel__core": "^7.20.5",
     "@types/lodash": "^4.14.170",
     "@types/node": "^20",
     "@types/prettier": "^2.3.0",
