fix: ga4, vercel/analytics

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@svgr/core": "^5.5.0",
     "@svgr/plugin-jsx": "^5.5.0",
     "@types/jsonld": "^1.5.5",
+    "@vercel/analytics": "^1.1.1",
     "@walmartlabs/json-to-simple-graphql-schema": "^2.0.4",
     "autoprefixer": "^10.2.6",
     "autoprefixer9": "npm:autoprefixer@9.x.x",
@@ -107,7 +108,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^11.0.1",
-    "react-ga": "^3.3.0",
     "recast": "^0.23.4",
     "rust-keywords": "^1.1.0",
     "sass": "^1.69.7",
