--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@svgr/core": "^5.5.0",
     "@svgr/plugin-jsx": "^5.5.0",
     "@types/jsonld": "^1.5.5",
+    "@w3cub/json-to-go": "^1.0.0",
     "@walmartlabs/json-to-simple-graphql-schema": "^2.0.4",
     "autoprefixer": "^10.2.6",
     "autoprefixer9": "npm:autoprefixer@9.x.x",
@@ -85,7 +86,6 @@
     "is-svg": "^4.3.1",
     "json-schema-to-typescript": "10.1.4",
     "json-schema-to-zod": "^0.1.2",
-    "json-to-go": "gist:0d0b8324131c80eeb7e1df20001be32f",
     "json-to-zod": "^1.1.2",
     "json-ts": "^1.6.4",
     "json_typegen_wasm": "^0.7.0",
