--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy": "node scripts/gh-pages.js",
     "sitemap": "node scripts/sitemap.js",
     "now-build": "next build",
+    "postbuild": "next-sitemap",
     "check-types": "tsc --noemit",
     "lint": "next lint --fix",
     "ainstall": "pnpm install --registry=https://registry.npmmirror.com",
@@ -96,7 +97,7 @@
     "markdown": "^0.5.0",
     "monaco-editor": "^0.45.0",
     "next": "14.0.4",
-    "nextjs-sitemap-generator": "^0.1.1",
+    "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
     "postcss": "^8.3.5",
     "postcss-js": "^3.0.3",
