feat: page mode?

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "start": "next start",
     "format": "prettier --write '**/*.ts' '**/*.tsx'",
     "build": "next build",
+    "postbuild": "pnpm run sitemap",
     "export": "next export",
     "deploy": "node scripts/gh-pages.js",
-    "sitemap": "node scripts/sitemap.js",
+    "sitemap": "next-sitemap",
     "now-build": "next build",
-    "postbuild": "next-sitemap",
     "check-types": "tsc --noemit",
     "lint": "next lint --fix",
     "ainstall": "pnpm install --registry=https://registry.npmmirror.com",
