feat: hash text

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "babel-plugin-object-styles-to-template": "^0.2.2",
     "babel-standalone": "^6.26.0",
     "classnames": "^2.5.1",
-    "clipboard-copy": "^4.0.1",
     "cron-converter": "^0.0.12",
     "cronstrue": "^1.81.0",
+    "crypto-js": "^4.2.0",
     "css-to-tailwindcss": "^1.0.4",
     "evergreen-ui": "^7.1.9",
     "flowgen": "^1.14.1",
@@ -129,6 +129,7 @@
     "@mdx-js/loader": "^3.0.0",
     "@styled-jsx/plugin-sass": "^4.1.0",
     "@types/babel__core": "^7.20.5",
+    "@types/crypto-js": "^4.2.2",
     "@types/lodash": "^4.14.170",
     "@types/node": "^20",
     "@types/prettier": "^2.3.0",
