--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "markdown": "^0.5.0",
     "monaco-editor": "^0.45.0",
     "next": "14.0.4",
+    "next-qrcode": "^2.5.1",
     "next-sitemap": "^4.2.3",
     "nprogress": "^0.2.0",
     "postcss": "^8.3.5",
@@ -105,7 +106,6 @@
     "postcss-nested": "^6.0.0",
     "postcss7": "npm:postcss@7.x.x",
     "prettier": "^1.18.2",
-    "qrcode.react": "^3.1.0",
     "rc-tween-one": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
