feat: converter tools

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "cronstrue": "^1.81.0",
     "crypto-js": "^4.2.0",
     "css-to-tailwindcss": "^1.0.4",
+    "date-fns": "^3.3.1",
     "evergreen-ui": "^7.1.9",
     "flowgen": "^1.14.1",
     "formik": "^2.2.9",
@@ -113,7 +114,6 @@
     "recast": "^0.23.4",
     "rust-keywords": "^1.1.0",
     "sass": "^1.69.7",
-    "sha1": "^1.1.1",
     "stringify-object": "^3.3.0",
     "styled-jsx": "^5.1.2",
     "svgo": "^3.2.0",
