--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "lodash": "^4.17.21",
     "markdown": "^0.5.0",
     "monaco-editor": "^0.45.0",
+    "netmask": "^2.0.2",
     "next": "14.0.4",
     "next-qrcode": "^2.5.1",
     "next-sitemap": "^4.2.3",
